	macro when reading the LogLevel setting from the configuration file.

	* src/server/output.c (output_send_loglevel_setting): Fix typo.

	* src/modules/module_utils.c:
	  - Add new macro SET_LOGLEVEL_NUM to set the log level variable for
	    speech modules.
	  - Add new function do_loglevel, to retrieve and call the above
	    mentioned macro to set the log level.

	* src/modules/module_main.c (main): Add a call to do_loglevel to set
	the log level for the module.

	* src/audio/alsa.c:
	  - Adjust the MSG macro to take the log level setting 	into account
	    before logging a message.
	  - Assign all log messages to a log level.

	* src/audio/oss.c:
	  - Adjust the MSG macro to take the log level setting into account
	    before logging a message.
	  - Assign all log messages to a log level.

2009-06-22  Luke Yelavich <luke.yelavich@canonical.com>

	* src/server/output.c: Add output_send_loglevel_setting function
	to send the loglevel configuration setting through to speech modules.

	* src/server/module.c (load_output_module): Add a call to
	output_send_loglevel_setting to send the log level configuration
	setting to modules.

2009-05-14  Hynek Hanke  <hanke@brailcom.org>

	* src/audio/pulse.c (_pulse_open): Typo.

	* src/server/config.c (load_default_global_set_options): Pulse
	Audio parameters modified according to Lennart's instructions.
 
	* src/audio/pulse.c (_pulse_open): Added PA_STREAM_ADJUST_LATENCY

2008-12-23  Milan Zamazal  <pdm@brailcom.org>

	* src/c/api/libspeechd.c:
	Fix socket leak on connection error in libspeechd.
	.
	(Thanks to Mario Lang).

2008-12-10  Hynek Hanke  <hanke@mach>

	* src/python/speechd_config/speechd.desktop: New file.

	* src/Makefile.am (EXTRA_DIST): Include speechd.desktop in distro.

	* configure.in (clientconforigdir): New location for .desktop file.

2008-11-26  Hynek Hanke  <hanke@mach>

	* Makefile.am: Maintainer-clean deletes configure.

2008-10-15  Hynek Hanke  <hanke@mach>
