@@ -155,6 +155,8 @@ typedef struct{
 
 AudioID* spd_audio_open(AudioOutputType type, void **pars, char **error);
 
+int log_level;
+
 int spd_audio_play(AudioID *id, AudioTrack track, AudioFormat format);
 
 int spd_audio_stop(AudioID *id);
@@ -162,5 +164,7 @@ int spd_audio_stop(AudioID *id);
 int spd_audio_close(AudioID *id);
 
 int spd_audio_set_volume(AudioID *id, int volume);
+
+void spd_audio_set_loglevel(int level);
 
 #endif /* ifndef #__SPD_AUDIO_H */
